updating progress to check metamask on another pc

--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "@angular/router": "^15.0.0",
     "@ng-bootstrap/ng-bootstrap": "14.0.1",
     "@popperjs/core": "^2.11.6",
+    "angular-datatables": "^15.0.0",
     "bootstrap": "^5.2.3",
+    "datatables.net": "^1.11.3",
+    "datatables.net-dt": "^1.11.3",
+    "jquery": "^3.6.0",
     "ngx-toastr": "^16.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -38,7 +42,9 @@
     "@nomiclabs/hardhat-etherscan": "^3.1.6",
     "@nomiclabs/hardhat-waffle": "^2.0.5",
     "@typechain/hardhat": "^6.1.5",
+    "@types/datatables.net": "^1.10.21",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.9",
     "chai": "^4.3.7",
     "ethereum-waffle": "^4.0.10",
     "ethers": "^5.7.2",
