--- a/angular.json
+++ b/angular.json
@@ -32,10 +32,12 @@
             "styles": [
               "src/styles.scss",
               "node_modules/ngx-toastr/toastr.css",
+              "node_modules/datatables.net-dt/css/jquery.dataTables.css",
               "node_modules/datatables.net-dt/css/jquery.dataTables.min.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/datatables.net/js/jquery.dataTables.js",
               "node_modules/datatables.net/js/jquery.dataTables.min.js"
             ]
           },
