pagination tables get students courses teachers done

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "datatables.net": "^1.11.3",
     "datatables.net-dt": "^1.11.3",
     "jquery": "^3.6.0",
+    "ngx-pagination": "^6.0.3",
     "ngx-toastr": "^16.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
