--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@ng-bootstrap/ng-bootstrap": "14.0.1",
+    "@ng-select/ng-select": "^10.0.3",
     "@popperjs/core": "^2.11.6",
     "angular-datatables": "^15.0.0",
     "bootstrap": "^5.2.3",
