--- a/nodeJs/package.json
+++ b/nodeJs/package.json
@@ -22,6 +22,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "sib-api-v3-sdk": "^8.5.0",
     "uuid4": "^2.0.3",
     "validator": "^13.9.0"
   }
